--- a/LibriVox/HomePage.storyboard
+++ b/LibriVox/HomePage.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Pkn-Ml-aoC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -46,7 +46,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oqc-aF-cfm">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oqc-aF-cfm" customClass="RoundView" customModule="LibriVox" customModuleProvider="target">
                                 <rect key="frame" x="16" y="121" width="343" height="218"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello IceQueen," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dDH-5L-dS0">
@@ -138,7 +138,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="343" height="115"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DGH-jY-LHy">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DGH-jY-LHy" customClass="RoundView" customModule="LibriVox" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="35" height="35"/>
                                                     <color key="backgroundColor" name="Main Blue Tone"/>
                                                     <constraints>
@@ -225,11 +225,140 @@
                         <outlet property="imgBook" destination="C1L-mf-Iv7" id="MUN-od-s9G"/>
                         <outlet property="logo" destination="3nx-NT-hZh" id="9t4-Ci-TOg"/>
                         <outlet property="progress" destination="yXE-Yg-jDF" id="wOm-na-nxz"/>
+                        <outlet property="trendingBooks" destination="lcC-6f-bEm" id="itx-Gc-lIR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="972" y="0.0"/>
+        </scene>
+        <!--Trending Books-->
+        <scene sceneID="JvO-ZD-RFB">
+            <objects>
+                <viewController title="Trending Books" id="MjL-5a-e21" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uGI-je-Ehw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trending Books" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhp-6e-8Kk">
+                                <rect key="frame" x="16" y="47" width="166.33333333333334" height="31.666666666666671"/>
+                                <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="23"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="115" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="BPp-ge-UHi">
+                                <rect key="frame" x="16" y="92.666666666666686" width="343" height="685.33333333333326"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="separatorColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="115" id="1jF-tm-9z9">
+                                        <rect key="frame" x="0.0" y="50" width="343" height="115"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1jF-tm-9z9" id="dBD-Sf-Jdx">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="115"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XQR-Fc-pNb" customClass="RoundView" customModule="LibriVox" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="8" width="100" height="107"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GfF-2i-ibs">
+                                                            <rect key="frame" x="4" y="-20" width="43" height="119"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="43" id="AKx-ZX-SJP"/>
+                                                                <constraint firstAttribute="height" constant="119" id="USc-X0-pah"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name="SavoyeLetPlain" family="Savoye LET" pointSize="100"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" name="Main Blue Tone"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="Ckq-lJ-rKR"/>
+                                                        <constraint firstItem="GfF-2i-ibs" firstAttribute="leading" secondItem="XQR-Fc-pNb" secondAttribute="leading" constant="4" id="Hkz-0B-Fco"/>
+                                                        <constraint firstAttribute="height" constant="107" id="Xvh-Zb-Vl9"/>
+                                                        <constraint firstAttribute="bottom" secondItem="GfF-2i-ibs" secondAttribute="bottom" constant="8" id="Y3e-xg-OvA"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author: Rick Riordan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G1N-J2-FVt">
+                                                    <rect key="frame" x="116" y="61" width="115.33333333333331" height="18"/>
+                                                    <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Zm-3b-Ntz">
+                                                    <rect key="frame" x="39" y="4" width="67" height="104"/>
+                                                    <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="67" id="Eb5-6F-O1Z"/>
+                                                        <constraint firstAttribute="height" constant="108" id="T8V-Zm-JIl"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre: Drama" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1oq-6v-02E">
+                                                    <rect key="frame" x="116" y="97" width="78.333333333333314" height="18"/>
+                                                    <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration: 08:40:31" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fc2-p6-Fze">
+                                                    <rect key="frame" x="116" y="79" width="107" height="18"/>
+                                                    <fontDescription key="fontDescription" name="Nunito-ExtraLight" family="Nunito" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Percy Jackson: The Lightning Thief" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fdp-p7-HtF">
+                                                    <rect key="frame" x="116" y="12.000000000000002" width="211" height="20.666666666666671"/>
+                                                    <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play" translatesAutoresizingMaskIntoConstraints="NO" id="MfV-c3-95P">
+                                                    <rect key="frame" x="292" y="80" width="35" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="35" id="bFg-pi-CtV"/>
+                                                        <constraint firstAttribute="width" constant="35" id="ngu-H8-fqx"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="8Zm-3b-Ntz" firstAttribute="top" secondItem="dBD-Sf-Jdx" secondAttribute="top" constant="4" id="0rO-8b-BJD"/>
+                                                <constraint firstAttribute="trailing" secondItem="fdp-p7-HtF" secondAttribute="trailing" constant="16" id="4nP-Qx-wVh"/>
+                                                <constraint firstItem="G1N-J2-FVt" firstAttribute="leading" secondItem="8Zm-3b-Ntz" secondAttribute="trailing" constant="10" id="EKd-kf-jWe"/>
+                                                <constraint firstItem="fc2-p6-Fze" firstAttribute="top" secondItem="G1N-J2-FVt" secondAttribute="bottom" id="F1G-LP-MxR"/>
+                                                <constraint firstAttribute="trailing" secondItem="MfV-c3-95P" secondAttribute="trailing" constant="16" id="HUJ-zb-2u4"/>
+                                                <constraint firstItem="fdp-p7-HtF" firstAttribute="top" secondItem="dBD-Sf-Jdx" secondAttribute="top" constant="12" id="Kde-rG-9so"/>
+                                                <constraint firstAttribute="bottom" secondItem="8Zm-3b-Ntz" secondAttribute="bottom" constant="7" id="SXP-he-Juj"/>
+                                                <constraint firstAttribute="bottom" secondItem="XQR-Fc-pNb" secondAttribute="bottom" id="TMZ-Gb-Co3"/>
+                                                <constraint firstItem="fdp-p7-HtF" firstAttribute="leading" secondItem="8Zm-3b-Ntz" secondAttribute="trailing" constant="10" id="VWu-rp-3Ha"/>
+                                                <constraint firstAttribute="bottom" secondItem="MfV-c3-95P" secondAttribute="bottom" id="XKl-99-lHh"/>
+                                                <constraint firstItem="1oq-6v-02E" firstAttribute="leading" secondItem="8Zm-3b-Ntz" secondAttribute="trailing" constant="10" id="Yhq-JU-K40"/>
+                                                <constraint firstItem="1oq-6v-02E" firstAttribute="top" secondItem="fc2-p6-Fze" secondAttribute="bottom" id="c0n-hm-dg6"/>
+                                                <constraint firstItem="XQR-Fc-pNb" firstAttribute="leading" secondItem="dBD-Sf-Jdx" secondAttribute="leading" id="dA4-Je-SWA"/>
+                                                <constraint firstItem="fc2-p6-Fze" firstAttribute="leading" secondItem="8Zm-3b-Ntz" secondAttribute="trailing" constant="10" id="jBw-uK-jV7"/>
+                                                <constraint firstItem="8Zm-3b-Ntz" firstAttribute="leading" secondItem="dBD-Sf-Jdx" secondAttribute="leading" constant="39" id="kcb-kh-bZz"/>
+                                                <constraint firstAttribute="bottom" secondItem="1oq-6v-02E" secondAttribute="bottom" id="yg4-8D-Fsc"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Wcx-8K-ViI"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="BPp-ge-UHi" firstAttribute="leading" secondItem="Wcx-8K-ViI" secondAttribute="leading" constant="16" id="4lS-o9-BkI"/>
+                            <constraint firstItem="zhp-6e-8Kk" firstAttribute="top" secondItem="Wcx-8K-ViI" secondAttribute="top" id="B7z-f6-sOe"/>
+                            <constraint firstItem="Wcx-8K-ViI" firstAttribute="trailing" secondItem="BPp-ge-UHi" secondAttribute="trailing" constant="16" id="Jrd-fK-zQZ"/>
+                            <constraint firstItem="zhp-6e-8Kk" firstAttribute="leading" secondItem="Wcx-8K-ViI" secondAttribute="leading" constant="16" id="hFq-eV-lTn"/>
+                            <constraint firstItem="BPp-ge-UHi" firstAttribute="bottom" secondItem="Wcx-8K-ViI" secondAttribute="bottom" id="orE-Uk-Lwe"/>
+                            <constraint firstItem="BPp-ge-UHi" firstAttribute="top" secondItem="zhp-6e-8Kk" secondAttribute="bottom" constant="14" id="rQO-0u-EWi"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LO6-nM-TM2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1752.8" y="0.0"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="bAN-FB-Ewr">
