--- a/LibriVox/Discover.storyboard
+++ b/LibriVox/Discover.storyboard
@@ -238,7 +238,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="156" height="236"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8bW-7Y-Xpn">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8bW-7Y-Xpn" customClass="RoundedBookImageView" customModule="LibriVox" customModuleProvider="target">
                                                     <rect key="frame" x="23" y="0.0" width="110" height="172"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="110" id="cIN-CW-FjW"/>
